:zap: Complete module-6.

--- a/cmake_tutorials/module6/CMakeLists.txt
+++ b/cmake_tutorials/module6/CMakeLists.txt
@@ -31,4 +31,5 @@ message(CMAKE_MAJOR_VERSION=${CMAKE_MAJOR_VERSION})
 message(CMAKE_MINOR_VERSION=${CMAKE_MINOR_VERSION})
 message(CMAKE_PATCH_VERSION=${CMAKE_PATCH_VERSION})
 
-message("Root level CMakeLists: CMAKE_PROJECT_NAME=${")
+message("Root level CMakeLists: CMAKE_PROJECT_NAME=${CMAKE_PROJECT_NAME}")
+message("Root level CMakeLists: PROJECT_NAME=${PROJECT_NAME}")
