--- a/cmake_tutorials/module6/my_math/CMakeLists.txt
+++ b/cmake_tutorials/module6/my_math/CMakeLists.txt
@@ -5,3 +5,6 @@ add_library(my_math
     src/division.cpp)
 
 target_include_directories(my_math PUBLIC include)
+
+message("Subdirectory level CMakeLists: CMAKE_PROJECT_NAME=${CMAKE_PROJECT_NAME}")
+message("Subdirectory level CMakeLists: PROJECT_NAME=${PROJECT_NAME}")
