:zap: CMake course finish module 8.

--- a/CPP/CMake/test_module7/CMakeLists.txt
+++ b/CPP/CMake/test_module7/CMakeLists.txt
@@ -11,3 +11,5 @@ if(my_math_FOUND)
 else()
     message(FATAL_ERROR "my_math library not found.")
 endif()
+
+message("I forgot to run CMake command.")
