--- a/Julia/Project.toml
+++ b/Julia/Project.toml
@@ -2,5 +2,6 @@ name = "LearningJulia"
 version = "0.1.0"
 
 [deps]
+Bits = "1654ce90-6ed3-553a-957f-9452c3a40996"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 VirtualEnv = "f8ef4a19-0666-4e54-aa90-5d6169a53550"
