--- a/CPP/UnitTesting/section_3/CMakeLists.txt
+++ b/CPP/UnitTesting/section_3/CMakeLists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.13)
 set(CMAKE_CXX_STANDARD 11)
 
-find_package(GTest REQUIRED)
-message("GTest_INCLUDE_DIRS = ${GTest_INCLUDE_DIRS}")
+# googletest
+include(FetchContent)
+FetchContent_Declare(googletest
+        GIT_REPOSITORY https://github.com/google/googletest
+        GIT_TAG release-1.11.0)
+FetchContent_MakeAvailable(googletest)
 
 add_library(common_library library_code.cpp)
 
@@ -10,4 +14,4 @@ add_executable(main_app main.cpp)
 target_link_libraries(main_app common_library)
 
 add_executable(unit_test_runner test_runner.cpp)
-target_link_libraries(unit_test_runner common_library $(GTEST_LIBRARIES) pthread)
+target_link_libraries(unit_test_runner common_library gtest_main gmock_main pthread)
